; ModuleID = '/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/net/extr_adm5120sw.c_adm5120_set_vlan.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/net/extr_adm5120sw.c_adm5120_set_vlan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SWITCH_REG_VLAN_G1 = common dso_local global i32 0, align 4
@SWITCH_REG_VLAN_G2 = common dso_local global i32 0, align 4
@SWITCH_NUM_PORTS = common dso_local global i32 0, align 4
@adm5120_devs = common dso_local global i32** null, align 8
@adm5120_port = common dso_local global i32** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @adm5120_set_vlan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @adm5120_set_vlan(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 0
  %8 = load i8, i8* %7, align 1
  %9 = sext i8 %8 to i32
  %10 = load i8*, i8** %2, align 8
  %11 = getelementptr inbounds i8, i8* %10, i64 1
  %12 = load i8, i8* %11, align 1
  %13 = sext i8 %12 to i32
  %14 = shl i32 %13, 8
  %15 = add nsw i32 %9, %14
  %16 = load i8*, i8** %2, align 8
  %17 = getelementptr inbounds i8, i8* %16, i64 2
  %18 = load i8, i8* %17, align 1
  %19 = sext i8 %18 to i32
  %20 = shl i32 %19, 16
  %21 = add nsw i32 %15, %20
  %22 = load i8*, i8** %2, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 3
  %24 = load i8, i8* %23, align 1
  %25 = sext i8 %24 to i32
  %26 = shl i32 %25, 24
  %27 = add nsw i32 %21, %26
  %28 = sext i32 %27 to i64
  store i64 %28, i64* %3, align 8
  %29 = load i32, i32* @SWITCH_REG_VLAN_G1, align 4
  %30 = load i64, i64* %3, align 8
  %31 = call i32 @sw_write_reg(i32 %29, i64 %30)
  %32 = load i8*, i8** %2, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 4
  %34 = load i8, i8* %33, align 1
  %35 = sext i8 %34 to i32
  %36 = load i8*, i8** %2, align 8
  %37 = getelementptr inbounds i8, i8* %36, i64 5
  %38 = load i8, i8* %37, align 1
  %39 = sext i8 %38 to i32
  %40 = shl i32 %39, 8
  %41 = add nsw i32 %35, %40
  %42 = sext i32 %41 to i64
  store i64 %42, i64* %3, align 8
  %43 = load i32, i32* @SWITCH_REG_VLAN_G2, align 4
  %44 = load i64, i64* %3, align 8
  %45 = call i32 @sw_write_reg(i32 %43, i64 %44)
  store i32 0, i32* %5, align 4
  br label %46

46:                                               ; preds = %93, %1
  %47 = load i32, i32* %5, align 4
  %48 = load i32, i32* @SWITCH_NUM_PORTS, align 4
  %49 = icmp slt i32 %47, %48
  br i1 %49, label %50, label %96

50:                                               ; preds = %46
  store i32 0, i32* %4, align 4
  br label %51

51:                                               ; preds = %70, %50
  %52 = load i32, i32* %4, align 4
  %53 = load i32, i32* @SWITCH_NUM_PORTS, align 4
  %54 = icmp slt i32 %52, %53
  br i1 %54, label %55, label %67

55:                                               ; preds = %51
  %56 = load i8*, i8** %2, align 8
  %57 = load i32, i32* %4, align 4
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds i8, i8* %56, i64 %58
  %60 = load i8, i8* %59, align 1
  %61 = sext i8 %60 to i32
  %62 = load i32, i32* %5, align 4
  %63 = shl i32 1, %62
  %64 = and i32 %61, %63
  %65 = icmp ne i32 %64, 0
  %66 = xor i1 %65, true
  br label %67

67:                                               ; preds = %55, %51
  %68 = phi i1 [ false, %51 ], [ %66, %55 ]
  br i1 %68, label %69, label %73

69:                                               ; preds = %67
  br label %70

70:                                               ; preds = %69
  %71 = load i32, i32* %4, align 4
  %72 = add nsw i32 %71, 1
  store i32 %72, i32* %4, align 4
  br label %51

73:                                               ; preds = %67
  %74 = load i32, i32* %4, align 4
  %75 = load i32, i32* @SWITCH_NUM_PORTS, align 4
  %76 = icmp slt i32 %74, %75
  br i1 %76, label %77, label %87

77:                                               ; preds = %73
  %78 = load i32**, i32*** @adm5120_devs, align 8
  %79 = load i32, i32* %4, align 4
  %80 = sext i32 %79 to i64
  %81 = getelementptr inbounds i32*, i32** %78, i64 %80
  %82 = load i32*, i32** %81, align 8
  %83 = load i32**, i32*** @adm5120_port, align 8
  %84 = load i32, i32* %5, align 4
  %85 = sext i32 %84 to i64
  %86 = getelementptr inbounds i32*, i32** %83, i64 %85
  store i32* %82, i32** %86, align 8
  br label %92

87:                                               ; preds = %73
  %88 = load i32**, i32*** @adm5120_port, align 8
  %89 = load i32, i32* %5, align 4
  %90 = sext i32 %89 to i64
  %91 = getelementptr inbounds i32*, i32** %88, i64 %90
  store i32* null, i32** %91, align 8
  br label %92

92:                                               ; preds = %87, %77
  br label %93

93:                                               ; preds = %92
  %94 = load i32, i32* %5, align 4
  %95 = add nsw i32 %94, 1
  store i32 %95, i32* %5, align 4
  br label %46

96:                                               ; preds = %46
  ret void
}

declare dso_local i32 @sw_write_reg(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
